fixed defualt tab not showing content right away

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -44,3 +44,7 @@ i.primary {
   width: 150px;
 object-fit: cover;
 }
+
+.card-trip-user.avatar-bordered {
+  object-fit: cover;
+}
